# mcp-server-gemini-image-generator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py  smithery.yaml  utils.py
src/mcp_server_gemini_image_generator/: __init__.py  server.py
